@@ -3,8 +3,7 @@ Changes in javaGeom library
 javaGeom-0.?.? (2008-??.??, rev. ???)
 
 New features
-- Conic2D implements Boundary2D
-- added Domain2D.EMPTY_DOMAIN and Boundary2D.EMPTY_BOUNDARY
+- Conic2D now implements Boundary2D
 
 Regressions
 - Shape2D does not inherit from java.awt.Shape anymore, reducing the number of
@@ -16,8 +15,10 @@ Regressions
 	+ PointSet2D.getPointsNumber()
 	+ Conic2D.getCartesianEquation()
 - deprecate classes with doubtful use:
+	+ empty shapes
 	+ Point2D.INFINITY_POINT
 
+	
 javaGeom-0.6.3 (2008-12-22, rev. 167)
 
 New features
